--- a/style.css
+++ b/style.css
@@ -6,6 +6,9 @@ margin-top:7rem;
       background-color:#191919;
       background-image: url("background.png");
       background-size:cover;
+      background-position:center;
+      height:100vh;
+      width:100vw;
 }
 
 h1 {
