--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body {
 margin-top:7rem;
       text-align: center;
       background-color:#191919;
-      background-image: url("background.png");
+      background-image: url("/background.png");
       background-size:cover;
       background-position:center;
       height:100vh;
